secondfile/objects/RDS_Competitive_Discount__c.object
<CustomObject>
    <description>Container to keep Competitive Rates Discounts</description>
    <fields>
        <fullName>Competitive_Discount_Amount__c</fullName>
        <description>Competitive Discount Amount</description>
        <inlineHelpText>Competitive Discount Amount</inlineHelpText>
        <label>Competitive Discount Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitive_Discount_Plan_Id__c</fullName>
        <description>Competitive Discount Plan Id</description>
        <inlineHelpText>Competitive Discount Plan Id</inlineHelpText>
        <label>Competitive Discount Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Discount_Type__c</fullName>
        <description>Competitive Discount Type</description>
        <inlineHelpText>Competitive Discount Type</inlineHelpText>
        <label>Competitive Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PremiseDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Related Master(Premise) with Child(RDS-CompetitiveDiscount)</description>
        <label>RDS-Premise Details</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipLabel>RDS-Competitive Discounts</relationshipLabel>
        <relationshipName>RDS_Competitive_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RDS -Competitive Discount</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>RDS Competitive Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Competitive Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_RDSComp</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS -Competitive Discount record.</errorMessage>
    </validationRules>
</CustomObject>